<resources>
    <string name="app_name">NumberFireProject</string>
    <string name="away_team_info">Away Team Info</string>
    <string name="home_team_info">Home Team Info</string>
    <string name="game_state_info">Game State Info</string>
    <string name="warriors">Warriors</string>
    <string name="lakers">Lakers</string>
    <string name="text_final">FINAL</string>
    <string name="hint_stephen_curry_gsw">Stephen Curry - GSW</string>
    <string name="hint_stephen_curry_stats">15 Pts, 1 Ast, 2 Reb</string>
    <string name="text_nerd">nERD</string>
    <string name="hint_stephen_curry_nerd">13</string>
</resources>
